Use SkPaintImageFilter of a bitmap to implement box reflection masks.

BUG=648055

Review-Url: https://codereview.chromium.org/2379453002
Cr-Commit-Position: refs/heads/master@{#421875}

Former-commit-id: 9132e7071ba56be31591b2a9b5b31e6fe0adc3b1